--- a/index.html
+++ b/index.html
@@ -348,11 +348,11 @@
 								<div class="widget">
 									<h3 class="widget-title">Resources</h3>
 									<ul class="no-bullet">
-										<li><a href="#">Sed imperdiet magna</a></li>
-										<li><a href="#">Pellentesque molestie</a></li>
-										<li><a href="#">Nulla luctus cursus</a></li>
-										<li><a href="#">Ligula vel lacinia</a></li>
-										<li><a href="#">Mauris scelerisque</a></li>
+										<li><a href="#">Insurance</a></li>
+										<li><a href="#">Insurance</a></li>
+										<li><a href="#">Insurances</a></li>
+										<li><a href="#">Insurance</a></li>
+										<li><a href="#">Insurance</a></li>
 									</ul>
 								</div>
 							</div>
