--- a/contact.html
+++ b/contact.html
@@ -32,13 +32,13 @@
 						<a href="index.html" id="branding">
 							<img src="images/logo.png" alt="Company Name" class="logo">
 							<div class="logo-text">
-								<h1 class="site-title">Company Name</h1>
-								<small class="description">Taline goes here</small>
+								<h1 class="site-title">Eventure</h1>
+								<small class="description">Insurance In the Age of FinTech</small>
 							</div>
 						</a> <!-- #branding -->
 					
 						<div class="right-section pull-right">
-							<a href="#" class="phone"><img src="images/icon-phone.png" class="icon">+1 823 424 9134</a>
+							<a href="#" class="phone"><img src="images/icon-phone.png" class="icon">+65 6123 4567</a>
 					
 							<form action="#" class="search-form">
 								<input type="text" placeholder="Search...">
@@ -92,11 +92,11 @@
 
 								<div class="contact-detail">
 									<address>
-										<p>Company Name INC. <br>
-											523 Burt Street, Omaha</p>
+										<p>Eventure <br>
+											23 Woodlands Avenue 8, Singapore</p>
 
-										<p>Phone: +1 823 424 9134
-											info@company.com</p>
+										<p>Phone: +65 6123 4567
+											info@eventure.com</p>
 									</address>
 								</div>
 							</div>
@@ -130,10 +130,10 @@
 							<div class="col-xs-12 col-sm-4 col-md-2">
 								<div class="widget">
 									<h3 class="widget-title">Contact</h3>
-									<address> Company Name INC. 523 Burt Street, Omaha
+									<address> Eventure 23 Woodlands Avenue 8, Singapore
 									</address>
-									<a href="#">Phone: +1 823 424 9134</a>
-									<a href="mailto:info@company.com">info@company.com</a>
+									<a href="#">Phone: +65 6123 4567</a>
+									<a href="mailto:info@company.com">info@eventure.com</a>
 								</div>
 							</div>
 							<div class="col-xs-12 col-sm-4 col-md-2">
@@ -188,11 +188,11 @@
 								<div class="widget">
 									<h3 class="widget-title">Resources</h3>
 									<ul class="no-bullet">
-										<li><a href="#">Sed imperdiet magna</a></li>
-										<li><a href="#">Pellentesque molestie</a></li>
-										<li><a href="#">Nulla luctus cursus</a></li>
-										<li><a href="#">Ligula vel lacinia</a></li>
-										<li><a href="#">Mauris scelerisque</a></li>
+										<li><a href="#">Insurance</a></li>
+										<li><a href="#">Insurance</a></li>
+										<li><a href="#">Insurance</a></li>
+										<li><a href="#">Insurance</a></li>
+										<li><a href="#">Insurance</a></li>
 									</ul>
 								</div>
 							</div>
